--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "antd": "^3.26.2",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
+    "node-sass": "^4.13.0",
     "pinyin": "^2.9.0",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
