--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
+    "react-github-btn": "^1.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
   },
