--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
   },
-  "homepage": ".",
+  "homepage": "https://giorgiopeng.github.io/handleChinese",
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
